--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,6 +68,14 @@
   background-image: url(../public/technology/background-technology-desktop.jpg);
 }
 
+.explore-btn {
+  @apply mt-[81px] flex h-[150px] w-[150px] items-center justify-center rounded-full bg-white font-bellefair text-xl tracking-[1.25px] text-blue-800;
+  transition: box-shadow 0.4s ease-out;
+}
+.explore-btn:hover {
+  box-shadow: 0 0 0 88px rgba(255, 255, 255, 10.36%);
+}
+
 .planet-detail {
   @apply text-center;
 }
