Make tablet version of home page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 .wrapper {
-  @apply mx-auto max-w-md px-6 tablet:px-0;
+  @apply mx-auto max-w-md px-6 tablet:max-w-[573px] tablet:px-0;
 }
 
 .nav-wrapper {
@@ -73,7 +73,7 @@
 }
 
 .explore-btn {
-  @apply mt-[81px] flex h-[150px] w-[150px] items-center justify-center rounded-full bg-white font-bellefair text-xl tracking-[1.25px] text-blue-800;
+  @apply mt-[81px] flex h-[150px] w-[150px] items-center justify-center rounded-full bg-white font-bellefair text-xl tracking-[1.25px] text-blue-800 tablet:mt-[156px] tablet:h-[242px] tablet:w-[242px] tablet:text-[32px];
   transition: box-shadow 0.4s ease-out;
 }
 .explore-btn:hover {
