--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    height: 100%;
+  }
+}
+
 @layer components {
   .wrapper {
     @apply mx-auto max-w-md px-6 tablet:max-w-[573px] tablet:px-0 desktop:max-w-[1110px];
