--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,62 +15,62 @@
 
   .bg-home-mobile {
     @apply bg-cover bg-center;
-    background-image: url(../public/home/background-home-mobile.jpg);
+    background-image: url(/home/background-home-mobile.jpg);
   }
 
   .bg-home-tablet {
     @apply bg-cover bg-center;
-    background-image: url(../public/home/background-home-tablet.jpg);
+    background-image: url(/home/background-home-tablet.jpg);
   }
 
   .bg-home-desktop {
     @apply bg-cover bg-center;
-    background-image: url(../public/home/background-home-desktop.jpg);
+    background-image: url(/home/background-home-desktop.jpg);
   }
 
   .bg-destination-mobile {
     @apply bg-cover bg-center;
-    background-image: url(../public/destination/background-destination-mobile.jpg);
+    background-image: url(/destination/background-destination-mobile.jpg);
   }
 
   .bg-destination-tablet {
     @apply bg-cover bg-center;
-    background-image: url(../public/destination/background-destination-tablet.jpg);
+    background-image: url(/destination/background-destination-tablet.jpg);
   }
 
   .bg-destination-desktop {
     @apply bg-cover bg-center;
-    background-image: url(../public/destination/background-destination-desktop.jpg);
+    background-image: url(/destination/background-destination-desktop.jpg);
   }
 
   .bg-crew-mobile {
     @apply bg-cover bg-center;
-    background-image: url(../public/crew/background-crew-mobile.jpg);
+    background-image: url(/crew/background-crew-mobile.jpg);
   }
 
   .bg-crew-tablet {
     @apply bg-cover bg-center;
-    background-image: url(../public/crew/background-crew-tablet.jpg);
+    background-image: url(/crew/background-crew-tablet.jpg);
   }
 
   .bg-crew-desktop {
     @apply bg-cover bg-center;
-    background-image: url(../public/crew/background-crew-desktop.jpg);
+    background-image: url(/crew/background-crew-desktop.jpg);
   }
 
   .bg-technology-mobile {
     @apply bg-cover bg-center;
-    background-image: url(../public/technology/background-technology-mobile.jpg);
+    background-image: url(/technology/background-technology-mobile.jpg);
   }
 
   .bg-technology-tablet {
     @apply bg-cover bg-center;
-    background-image: url(../public/technology/background-technology-tablet.jpg);
+    background-image: url(/technology/background-technology-tablet.jpg);
   }
 
   .bg-technology-desktop {
     @apply bg-cover bg-center;
-    background-image: url(../public/technology/background-technology-desktop.jpg);
+    background-image: url(/technology/background-technology-desktop.jpg);
   }
 
   .explore-btn {
